{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1997,
  "lineage": "ca8e8273-aef2-d42e-4629-209d641a829d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:transit-gateway/tgw-0b8222d426a3d0402",
            "association_default_route_table_id": "tgw-rtb-0bd75527e676dd4e5",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for Tokyo region",
            "dns_support": "enable",
            "id": "tgw-0b8222d426a3d0402",
            "multicast_support": "disable",
            "owner_id": "299145660695",
            "propagation_default_route_table_id": "tgw-rtb-0bd75527e676dd4e5",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "tokyo-main-tgw"
            },
            "tags_all": {
              "Name": "tokyo-main-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "idc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "30.0.0.0/16",
            "id": "tgw-rtb-0bd75527e676dd4e5_30.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0d58d173b4cf7f79d",
            "transit_gateway_route_table_id": "tgw-rtb-0bd75527e676dd4e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:transit-gateway-attachment/tgw-attach-009d7ae44c602caab",
            "dns_support": "enable",
            "id": "tgw-attach-009d7ae44c602caab",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-072fcb9f9b2804bdd"
            ],
            "tags": {
              "Name": "tokyo-vpc-tgw-attachment"
            },
            "tags_all": {
              "Name": "tokyo-vpc-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0b8222d426a3d0402",
            "vpc_id": "vpc-03c4e55793af30fd2",
            "vpc_owner_id": "299145660695"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.tokyo.aws_subnet.tgw",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "idc_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0680fe8259476ee6f",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:elastic-ip/eipalloc-0680fe8259476ee6f",
            "domain": "vpc",
            "id": "eipalloc-0680fe8259476ee6f",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-113-53-168.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.113.53.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "idc-cgw-eip"
            },
            "tags_all": {
              "Name": "idc-cgw-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_idc_private_to_seoul_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07cc080be78ee52881822919653",
            "instance_id": "i-0abff2f60794ba012",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c3b83d4b29731a8f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cc080be78ee5288",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_idc_private_to_seoul_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07cc080be78ee5288179966490",
            "instance_id": "i-0abff2f60794ba012",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c3b83d4b29731a8f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07cc080be78ee5288",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_idc_public_to_seoul_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055c19700420abdc11822919653",
            "instance_id": "i-0abff2f60794ba012",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c3b83d4b29731a8f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055c19700420abdc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_idc_public_to_seoul_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055c19700420abdc1179966490",
            "instance_id": "i-0abff2f60794ba012",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0c3b83d4b29731a8f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055c19700420abdc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_private_to_seoul_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a17cfaff0cc869ab1822919653",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a17cfaff0cc869ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b8222d426a3d0402",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_route_table.private_beanstalk",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo_private_to_seoul_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a17cfaff0cc869ab179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a17cfaff0cc869ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b8222d426a3d0402",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_route_table.private_beanstalk",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:security-group/sg-0efe3ce7334c8dc05",
            "description": "Security group for Elastic Beanstalk instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efe3ce7334c8dc05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "30.0.0.0/16",
                  "10.0.0.0/16",
                  "172.16.0.0/16"
                ],
                "description": "ICMP from VPCs and IDC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "tokyo-beanstalk-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-beanstalk-sg"
            },
            "tags_all": {
              "Name": "tokyo-beanstalk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e68e34976bb4db93",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:instance/i-0abff2f60794ba012",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abff2f60794ba012",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudupconJapan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3b83d4b29731a8f",
            "private_dns": "ip-30-0-1-246.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.1.246",
            "public_dns": "ec2-35-75-14-1.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.14.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0716c034b2a8cacdd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-069333939e56f114f",
            "tags": {
              "Name": "idc-cgw-instance"
            },
            "tags_all": {
              "Name": "idc-cgw-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c4a735449f9d11e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e68e34976bb4db93",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:instance/i-0e342bdfe7b6e6bfb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e342bdfe7b6e6bfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cloudupconJapan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d52bf37f50ca78c",
            "private_dns": "ip-30-0-2-53.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.2.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04273e424d0b91904",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee0f3a51172d4d28",
            "tags": {
              "Name": "idc-db-instance"
            },
            "tags_all": {
              "Name": "idc-db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0d39439b6935d07"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_security_group.db",
            "module.idc.aws_subnet.private_db",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:internet-gateway/igw-0dc5f41022c7b5a5b",
            "id": "igw-0dc5f41022c7b5a5b",
            "owner_id": "299145660695",
            "tags": {
              "Name": "idc-igw"
            },
            "tags_all": {
              "Name": "idc-igw"
            },
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:route-table/rtb-07cc080be78ee5288",
            "id": "rtb-07cc080be78ee5288",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c3b83d4b29731a8f",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "idc-private-rt"
            },
            "tags_all": {
              "Name": "idc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:route-table/rtb-055c19700420abdc1",
            "id": "rtb-055c19700420abdc1",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc5f41022c7b5a5b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "idc-public-rt"
            },
            "tags_all": {
              "Name": "idc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083b2ca3bcfcb0fae",
            "route_table_id": "rtb-07cc080be78ee5288",
            "subnet_id": "subnet-0ee0f3a51172d4d28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.private_db",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e307c95dadbcf31",
            "route_table_id": "rtb-055c19700420abdc1",
            "subnet_id": "subnet-069333939e56f114f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:security-group/sg-05c4a735449f9d11e",
            "description": "Security group for CGW instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c4a735449f9d11e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              }
            ],
            "name": "idc-cgw-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idc-cgw-sg"
            },
            "tags_all": {
              "Name": "idc-cgw-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:security-group/sg-0f0d39439b6935d07",
            "description": "Security group for DB instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0d39439b6935d07",
            "ingress": [
              {
                "cidr_blocks": [
                  "30.0.0.0/16",
                  "40.0.0.0/16"
                ],
                "description": "ICMP from VPC and AWS VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "30.0.0.0/16",
                  "40.0.0.0/16"
                ],
                "description": "MySQL from VPC and AWS VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "30.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "idc-db-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idc-db-sg"
            },
            "tags_all": {
              "Name": "idc-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-0ee0f3a51172d4d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee0f3a51172d4d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "idc-private-db"
            },
            "tags_all": {
              "Name": "idc-private-db"
            },
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-069333939e56f114f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069333939e56f114f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "idc-public-cgw"
            },
            "tags_all": {
              "Name": "idc-public-cgw"
            },
            "vpc_id": "vpc-0ab6df749aca4b7fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:vpc/vpc-0ab6df749aca4b7fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0ece86cc2fb81391b",
            "default_route_table_id": "rtb-0963f3f95ea889a12",
            "default_security_group_id": "sg-07a7d960c115db675",
            "dhcp_options_id": "dopt-0fe1ecf0771055374",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab6df749aca4b7fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0963f3f95ea889a12",
            "owner_id": "299145660695",
            "tags": {
              "Name": "idc-vpc"
            },
            "tags_all": {
              "Name": "idc-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.tokyo_to_idc"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab6b237167c0bd9",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:elastic-ip/eipalloc-00ab6b237167c0bd9",
            "domain": "vpc",
            "id": "eipalloc-00ab6b237167c0bd9",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-78-149-231.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.78.149.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat-eip-1"
            },
            "tags_all": {
              "Name": "tokyo-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1d01d292022742",
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:elastic-ip/eipalloc-0ed1d01d292022742",
            "domain": "vpc",
            "id": "eipalloc-0ed1d01d292022742",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-159-244-31.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.159.244.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat-eip-2"
            },
            "tags_all": {
              "Name": "tokyo-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:internet-gateway/igw-0ca64068371df9729",
            "id": "igw-0ca64068371df9729",
            "owner_id": "299145660695",
            "tags": {
              "Name": "tokyo-igw"
            },
            "tags_all": {
              "Name": "tokyo-igw"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab6b237167c0bd9",
            "association_id": "eipassoc-046f7af6272c5b6c6",
            "connectivity_type": "public",
            "id": "nat-082a8198ba8bde96b",
            "network_interface_id": "eni-0b9a0f80a1f98dfac",
            "private_ip": "40.0.1.141",
            "public_ip": "35.78.149.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-013726747a5ba5b6c",
            "tags": {
              "Name": "tokyo-nat-1"
            },
            "tags_all": {
              "Name": "tokyo-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1d01d292022742",
            "association_id": "eipassoc-0750e49f079b340be",
            "connectivity_type": "public",
            "id": "nat-09c475a8af8076ec3",
            "network_interface_id": "eni-03a55992f1e005bb0",
            "private_ip": "40.0.2.147",
            "public_ip": "13.159.244.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09925bd2c3058e30c",
            "tags": {
              "Name": "tokyo-nat-2"
            },
            "tags_all": {
              "Name": "tokyo-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "30.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a17cfaff0cc869ab1389800411",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a17cfaff0cc869ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b8222d426a3d0402",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_route_table.private_beanstalk",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:route-table/rtb-0a17cfaff0cc869ab",
            "id": "rtb-0a17cfaff0cc869ab",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082a8198ba8bde96b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-private-beanstalk-rt"
            },
            "tags_all": {
              "Name": "tokyo-private-beanstalk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:route-table/rtb-0906bbc1e03fa2917",
            "id": "rtb-0906bbc1e03fa2917",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca64068371df9729",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-public-rt"
            },
            "tags_all": {
              "Name": "tokyo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:route-table/rtb-061cddcc34119a190",
            "id": "rtb-061cddcc34119a190",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tokyo-tgw-rt"
            },
            "tags_all": {
              "Name": "tokyo-tgw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a0df2eac6dc016",
            "route_table_id": "rtb-0a17cfaff0cc869ab",
            "subnet_id": "subnet-00f9e01dd0077ccb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_route_table.private_beanstalk",
            "module.tokyo.aws_subnet.private_beanstalk",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e299f7987e49eb82",
            "route_table_id": "rtb-0a17cfaff0cc869ab",
            "subnet_id": "subnet-06275355afda65291"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_eip.nat",
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_nat_gateway.main",
            "module.tokyo.aws_route_table.private_beanstalk",
            "module.tokyo.aws_subnet.private_beanstalk",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05254f309a577858b",
            "route_table_id": "rtb-0906bbc1e03fa2917",
            "subnet_id": "subnet-013726747a5ba5b6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_route_table.public",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ade58abe10adf3c",
            "route_table_id": "rtb-0906bbc1e03fa2917",
            "subnet_id": "subnet-09925bd2c3058e30c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_route_table.public",
            "module.tokyo.aws_subnet.public_nat",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08936500ebcd2f1eb",
            "route_table_id": "rtb-061cddcc34119a190",
            "subnet_id": "subnet-072fcb9f9b2804bdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_route_table.tgw",
            "module.tokyo.aws_subnet.tgw",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008f5611a3a414a1d",
            "route_table_id": "rtb-0906bbc1e03fa2917",
            "subnet_id": "subnet-09d7b611a413bd97e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_route_table.public",
            "module.tokyo.aws_subnet.vpn_gateway",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-00f9e01dd0077ccb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "40.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f9e01dd0077ccb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-private-beanstalk-1"
            },
            "tags_all": {
              "Name": "tokyo-private-beanstalk-1"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-06275355afda65291",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "40.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06275355afda65291",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-private-beanstalk-2"
            },
            "tags_all": {
              "Name": "tokyo-private-beanstalk-2"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-013726747a5ba5b6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "40.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013726747a5ba5b6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-public-nat-1"
            },
            "tags_all": {
              "Name": "tokyo-public-nat-1"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-09925bd2c3058e30c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "40.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09925bd2c3058e30c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-public-nat-2"
            },
            "tags_all": {
              "Name": "tokyo-public-nat-2"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-072fcb9f9b2804bdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "40.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072fcb9f9b2804bdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-tgw"
            },
            "tags_all": {
              "Name": "tokyo-tgw"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:subnet/subnet-09d7b611a413bd97e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "40.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d7b611a413bd97e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-vpn-gateway-subnet"
            },
            "tags_all": {
              "Name": "tokyo-vpn-gateway-subnet"
            },
            "vpc_id": "vpc-03c4e55793af30fd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:299145660695:vpc/vpc-03c4e55793af30fd2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.0.0.0/16",
            "default_network_acl_id": "acl-0a7a7220686443b98",
            "default_route_table_id": "rtb-03ebe6debb9be2f75",
            "default_security_group_id": "sg-06472a5ebb955705a",
            "dhcp_options_id": "dopt-0fe1ecf0771055374",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c4e55793af30fd2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ebe6debb9be2f75",
            "owner_id": "299145660695",
            "tags": {
              "Name": "tokyo-vpc"
            },
            "tags_all": {
              "Name": "tokyo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}